[package]
name = "pock-server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["postgres"] }
regex = "1.10.2"
rocket = { version = "0.5.0", features = ["json"] }

[build-dependencies]
regex = "1.10.2"
